# big_iron

./: .gitignore  Cargo.toml  README.md  serve.sh
app/: global.scss  index.html
app/src/: index.rs  main.rs  nav.rs
server/: Cargo.toml  renv_prepare.R  serve.sh  ž
server/models/: default_create.R  default_run.R  predict.R  prediction_model.rds
server/src/: book.rs  cli.rs  database.rs  main.rs  plot.rs  portfolio.rs  prediction_model.rs  server_error.rs
src/: main.rs  plot.rs
