[package]
authors = ["Mitja Belak"]
edition = "2021"
name = "server"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.2"
plotters = { version = "0.3.4" }
serde = "1.0"
binance_spot_connector_rust = "1.0.0"
toml = "0.7"
